# nonebot-plugin-hikarisearch

./: README.md  pyproject.toml
nonebot_plugin_hikarisearch/: __init__.py  config.py  data_source.py
